Add more resources

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
 <body>
     <!-- Preloader -->
     <div class="preloader">
-        <img src="img/preloader.gif" alt="Preloader Image">
+        <img src="{{ full_url ~ 'static/img/preloader.gif' }}" alt="Preloader Image">
     </div>
     <!-- Preloader -->
     
