--- a/templates/index.html
+++ b/templates/index.html
@@ -103,10 +103,10 @@
                                     <i class="fas fa-search"></i>
                                 </div>
                                 <div class="searchbox">
-                                    <form action="#" method="get">
+                                    <form action="/search" method="post">
                                         <div class="input-group">
-                                            <input type="text" id="s" class="form-control" placeholder="Search...">
-                                            <button class="btn btn-danger" type="button"><i class="fas fa-search"></i></button>
+                                            <input type="text" id="s" name="search" class="form-control" placeholder="Search...">
+                                            <button class="btn btn-danger" type="submit"><i class="fas fa-search"></i></button>
                                         </div>
                                     </form>
                                 </div>
